# test

./: CMakeLists.txt  Main.qml  README.md  hc_trans.h  main.cpp
HcControls/: CMakeLists.txt  Def.h  HcAccentColor.cpp  HcAccentColor.h  HcApp.cpp  HcApp.h  HcColors.cpp  HcColors.h  HcFileOp.cpp  HcFileOp.h  HcIconDef.h  HcRectangle.cpp  HcRectangle.h  HcSvgImage.cpp  HcSvgImage.h  HcTableSortProxyModel.cpp  HcTableSortProxyModel.h  HcTextStyle.cpp  HcTextStyle.h  HcTheme.cpp  HcTheme.h  HcTools.cpp  HcTools.h  hc_en_US.ts  hc_zh_CN.ts  hctablemodel.cpp  hctablemodel.h  singleton.h
HcControls/qml/Controls/: Constants.qml  HcAutoSuggestBox.qml  HcButton.qml  HcCalendar.qml  HcCalendarPicker.qml  HcCardPopupDlg.qml  HcChart.qml  HcCheckBox.qml  HcClip.qml  HcComboBox.qml  HcControl.qml  HcControlBackground.qml  HcDialog.qml  HcDivider.qml  HcExpander.qml  HcFaultDialog.qml  HcFocusRectangle.qml  HcFrame.qml  HcIcon.qml  HcIconButton.qml  HcMenu.qml  HcMenuItem.qml  HcMessageDlg.qml  HcMultilineTextBox.qml  HcPage.qml  HcPagination.qml  HcPasswordBox.qml  HcPopup.qml  HcRadioButton.qml  HcRadioButtons.qml  HcRoundedRectangle.qml  HcScrollBar.qml  HcScrollablePage.qml  HcShadow.qml  HcSimplifiedPagination.qml  HcTabButton.qml  HcTableView.qml  HcText.qml  HcTextBox.qml  HcTextBoxBackground.qml  (+6 more)
HcControls/qml/Controls/HcPcrControls/: HcPcr.qml  HcPcrHelper.qml  HcPcrStage.qml  HcPcrStep.qml
HcControls/qml/i18n/: hc_en_US.qm  hc_zh_CN.qm
server/: CMakeLists.txt  service.cpp  service.h
